--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -12,6 +12,15 @@
   color: white;
 }
 
+h1, .h1 {
+  font-size: 48px;
+}
+
+h2, .h2 {
+  font-size: 32px;
+}
+
+
 .hero {
   background: url('hero4.jpg') no-repeat center center fixed; //css so entire photo is displayed nicely cropped like a banner
   -webkit-background-size: cover;
@@ -23,8 +32,13 @@
 }
 
 h1, h2, h3, h4, h5, h6, nav.navbar {
-  margin:0;
+  margin:0px;
+  text-align: left;
 } 
+
+.booyah-box h2, .booyah-box h1 {
+    margin: 0px;
+}
 
 .frosty {
   background:rgba(100,40,97,0.35);
@@ -44,6 +58,7 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
   font-family: "Tondo", sans-serif;
   font-weight: 250;
   text-shadow: rgba(0,0,0,0.95) 0.5px 0.5px;
+  text-align: center;
 }
 
 .btn {
@@ -60,8 +75,8 @@ body {
   // -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
   // box-shadow: 1px 1px 2px 0 #d0d0d0;
   background: #fff;
-  border: 1px solid #ccc;
-  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  //border: 1px solid #ccc;
+  // border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding:40px;
 }
 .booyah-box h2, .booyah-box h1 {
