--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,13 +1,11 @@
 <br />
 
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h1 class="text-center">Courses</h1>
+  <h1>Courses</h1>
   <hr />
-
   <% @courses.each do |course| %>
-    <h2 class="text-center">
+    <h2>
       <%= link_to course.title, course_path(course) %></h2>
-    <br />
     <%= image_tag course.image, class: 'img-responsive' %>
     <div class="col-sm-8 col-xs-12">
       <%= course.description %>
@@ -16,7 +14,7 @@
     <br/>
       <%= link_to 'More Details...', course_path(course), class: 'btn btn-primary btn-large' %>
     </div>
-    <br/>
+    <hr/>
     <br/>
     <br/>
     <br/>
