--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -3,7 +3,7 @@
 <br />
 <!--booyah box -->
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h1 class="text-center"><%= @course.title %></h1>
+  <h1><%= @course.title %></h1>
   <hr/>
     <div class="index-photoframe">
     <%= image_tag @course.image, class: 'img-responsive' %>
