--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,11 +1,11 @@
 <br />
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-  <h1>What I'm Learning</h1>
+  <h1>What I'm Learning...</h1>
+  <br />
   <% current_user.enrolled_courses.each do |course| %>
-    <h3 class="text-center">
+    <h2>
       <%= link_to course.title, course_path(course) %>
-    </h3>
-    <br />
+    </h2>
     <%= image_tag course.image, class: 'img-responsive' %>
     <br />
     <div class="col-xs-12 col-sm-8">
@@ -18,12 +18,12 @@
     <br class="clr" />
   <% end %>
 
-  <h1>What I'm Teaching</h1>
+  <h1>What I'm Teaching...</h1>
+  <br />
 <% current_user.courses.each do |course| %>
-  <h3 class="text-center">
+  <h2>
     <%= link_to course.title, course_path(course) %>
-  </h3>
-  <br/>
+  </h2>
   <%= image_tag course.image, class: 'img-responsive' %>
   <br />
   <div class="col-xs-12 col-sm-8">
