--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -5,7 +5,7 @@
     <br />
     <br />
     <br />
-    <h1>GRE Test Prep</h1>
+    <h1>SmartStuff Test Prep</h1>
     <br />
     <h2>Increase your scores, guaranteed.</h2>
     <br />
