--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,7 @@
 
 
 <div id="footer">
-  <div class="wrap"> 
+  <div class="container"> 
       <div class="col-xs-12 col-sm-3">
       <b>Teachers</b>
       <br />
