--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -22,18 +22,18 @@
   text-decoration: none;
 }
 
-$footer-height-mobile:400px;
-@media (max-width: 750px) {
-  #footer {
-    height:$footer-height-mobile;
-  }
+// $footer-height-mobile:400px;
+// @media (max-width: 750px) {
+//   #footer {
+//     height:$footer-height-mobile;
+//   }
 
-  /* Wrapper for page content to push down footer */
-  #wrap {
-  margin: 0 auto -$footer-height-mobile; // space around (outside) the element from border outwards
-  /* Pad bottom by footer height */
-  padding: 0 0 $footer-height-mobile; //space around (inside) the element from text to border 
-}
+//   /* Wrapper for page content to push down footer */
+//   #wrap {
+//   margin: 0 auto -$footer-height-mobile; // space around (outside) the element from border outwards
+//   /* Pad bottom by footer height */
+//   padding: 0 0 $footer-height-mobile; //space around (inside) the element from text to border 
+// }
 
   #footer .social {
   margin-top: 10px;
