--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -1,4 +1,9 @@
-/* Set the fixed height of the footer here */
+// html,
+// body {
+//   height: 100%;
+//   /* The html and body elements cannot have any padding or margin. */
+// }
+
 #footer {
   color: white;
   background-color: rgba(130,130,130,0.9);
@@ -22,6 +27,7 @@
   text-decoration: none;
 }
 
+/* Set the fixed height of the footer here */
 // $footer-height-mobile:400px;
 // @media (max-width: 750px) {
 //   #footer {
@@ -35,12 +41,19 @@
 //   padding: 0 0 $footer-height-mobile; //space around (inside) the element from text to border 
 // }
 
-  #footer .social {
-  margin-top: 10px;
-  }
-// }
+//   #footer .social {
+//   margin-top: 10px;
+//   }
+// // }
 
-
+#wrap {
+  min-height: 100%;
+  height: auto;
+  /* Negative indent footer by its height */
+  margin: 0 auto -60px;
+  /* Pad bottom by footer height */
+  padding: 0 0 60px;
+}
 /* Flexbox Sticky Footer CSS */
 .Site {
   display: flex;
