--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -32,7 +32,7 @@ h2, .h2 {
 
 
 .hero {
-  background: url('hero4.jpg') no-repeat center center fixed; //css so entire photo is displayed nicely cropped like a banner
+  background: url('hero4.jpg') no-repeat center center fixed !important; //css so entire photo is displayed nicely cropped like a banner
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -65,7 +65,7 @@ h1, h2, h3, h4, h5, h6, nav.navbar {
 
 .frosty h1 {
   font-family: "Helvetica Neue", Helvetica;
-  font-weight: 350;
+  font-weight: 250;
   text-shadow: rgba(0,0,0,0.95) 0.5px 0.5px;
   text-align: center;
   padding-top: 125px;
