--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -121,6 +121,10 @@ body {
   margin:10px;
 }
 
+.label {
+  padding: .4em .6em .5em;
+  font-size: 85%;
+}
 
 .lesson {
   background-color:black;
@@ -131,13 +135,14 @@ body {
 .lesson a {
   color:white;
   font-family: "Helvetica Neue", Helvetica;
-  font-weight:110;
+  font-weight: 100;
   font-size: 15px;
 }
 
 .lesson a b {
+  font-family: "Helvetica Neue", Helvetica;
   font-weight: 100;
-  font-size:25px;
+  font-size:20px;
 }
 
 ul {
