--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -12,7 +12,7 @@
         <%= @course.description %>
       </div> <!-- enrollment button and course description end-->
   <!-- <div class="col-xs-10 col-xs-offset-1"> -->
-  <div class="col-sm-4 col-xs-12">
+  <div class="col-sm-4 col-xs-12 text-center">
   <!-- course description start -->
 
       
